--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "parcel-bundler": "^1.9.1"
   },
   "dependencies": {
+    "prop-types": "^15.6.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-html-email": "^3.0.0"
